[package]
authors = ["biomunky", "lotia"]
categories = ["api-bindings"]
description = "Wrapper for the newsapi, uses reqwest to do the http work. A learn by doing project"
edition = "2018"
homepage = "https://github.com/biomunky/newsapi"
keywords = ["newsapi", "client"]
license = "MIT/Apache-2.0"
name = "newsapi"
readme = "README.md"
version = "0.7.0"

[lib]
name = "newsapi"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
custom_error = "1.9"
enum-map = "2.4"
lazy_static = "1.4"
percent-encoding = "2.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.19", features = ["rt", "rt-multi-thread", "macros"] }
